<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragments_background_color"
    tools:context=".ui.password.PasswordFragment">

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_min"
        android:layout_marginTop="@dimen/common_padding_middle"
        android:text="@string/tv_generate_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_padding_middle"
        android:layout_marginTop="@dimen/common_padding_middle"
        android:backgroundTint="@color/bottom_navigation_unselected_icon"
        android:text="@string/btn_generate_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_padding_middle"
        android:layout_marginTop="@dimen/common_padding_middle"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/lyCopy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGenerate">

        <TextView
            android:id="@+id/tvGenerated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tv_generated_password"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/icArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/common_padding_min"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="@id/etPhrase"
            app:layout_constraintEnd_toStartOf="@id/etPhrase"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/etPhrase"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvGeneratedPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:maxLength="21"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_padding_middle"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/lyPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lyPassword"
        app:layout_constraintTop_toTopOf="@id/lyPassword">

        <ImageView
            android:id="@+id/icCopy"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_copy"
            tools:ignore="ContentDescription" />

        <FrameLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tvCopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tv_copy"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvCopied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tv_copied"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="invisible" />


        </FrameLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>
