<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragments_background_color"
    tools:context=".ui.phrase.PhraseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvPhraseUppercase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_min"
            android:layout_marginTop="@dimen/common_padding_middle"
            android:text="@string/tv_phrase"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icAz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_min"
            android:src="@drawable/ic_az"
            app:layout_constraintBottom_toBottomOf="@id/etPhrase"
            app:layout_constraintEnd_toStartOf="@id/etPhrase"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/etPhrase"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPhrase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min"
            android:layout_marginEnd="@dimen/common_padding_min"
            android:backgroundTint="@color/white"
            android:hint="@string/et_hint_phrase"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icAz"
            app:layout_constraintTop_toBottomOf="@id/tvPhraseUppercase" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_middle"
            android:layout_marginTop="@dimen/common_padding_min"
            android:backgroundTint="@color/bottom_navigation_unselected_icon"
            android:text="@string/btn_convert_phrase"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/icAz"
            app:layout_constraintTop_toBottomOf="@id/etPhrase" />

        <TextView
            android:id="@+id/tvOriginal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_middle"
            android:text="@string/tv_original_sentence"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_continue" />


        <FrameLayout
            android:id="@+id/flOriginalSentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_middle"
            android:layout_marginTop="@dimen/common_padding_middle"
            android:background="@drawable/white_border"
            android:padding="@dimen/common_padding_min"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOriginal">

            <TextView
                android:id="@+id/tvOriginalSentence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="14sp"/>

        </FrameLayout>

        <TextView
            android:id="@+id/tvConverted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_middle"
            android:text="@string/tv_converted_sentence"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flOriginalSentence" />

        <FrameLayout
            android:id="@+id/flConvertedSentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_middle"
            android:layout_marginTop="@dimen/common_padding_middle"
            android:layout_marginBottom="@dimen/common_padding_extra"
            android:background="@drawable/white_border"
            android:padding="@dimen/common_padding_min"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvConverted">

            <TextView
                android:id="@+id/tvConvertedSentence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
